objects/Vehicle_Attachment__c.object
<CustomObject>
    <fields>
        <fullName>Content_ID__c</fullName>
        <label>Content ID</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Content_URL__c</fullName>
        <formula>IF(ISBLANK(Content_ID__c), &quot;&quot;, &quot;https://shiftcars1.appspot.com/admin/blob_content/&quot;&amp;Content_ID__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Content URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vehicle_ID__c</fullName>
        <label>Vehicle</label>
        <referenceTo>Vehicle__c</referenceTo>
        <relationshipLabel>Vehicle Attachments</relationshipLabel>
        <relationshipName>Vehicle_Attachments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Vehicle Attachment</label>
    <nameField>
        <label>Vehicle Attachment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Vehicle Attachments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>